@@ -1,3 +1,4 @@
+0.40.5-0 @12/02/2004 06:55:00 UTC@
 0.40.4-0 @12/01/2004 17:30:00 UTC@
 0.40.3-0 @11/22/2004 00:00:00 UTC@
 0.40.2-0 @11/18/2004 21:35:00 UTC@
