@@ -1,6 +1,9 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
-2004-12-01 allenb   Added support for demangling of callstack data with gcc.
+2004-12-02 patrickh Updated to allow the use of version 8.1 of the Intel C++
+                    compiler.
+                    NEW VERSION: 0.40.5
+2004-12-01 allenb   Added support for demangling of callstack data with GCC.
 2004-11-18 patrickh Changed vpr::Int8 from char to signed char.
                     NEW VERSION: 0.40.2
 2004-10-27 allenb   Added support for multi-threaded profile data collection.
